@@ -38,6 +38,7 @@
   [#12333] Standard requires libstdc to define vprintf and vscanf
   [#12495] about Busy-wait delay loops(document)
   [#12775] Possible Bug in sscanf on string end
+  [#13557] small typo in avr-libc-user-manual-1.2.3
   [#14224] _delay_ms() not inlining if called more than once in a unit
   [#14241] 'eeprom_is_ready' is not compiled with ATmega48
   [#14262] avr-libc documentation error about .init sections
